Fix error messages to browser window, so that they are visible even when scrolled down.

--- a/web/app/styles/alert.css
+++ b/web/app/styles/alert.css
@@ -1,5 +1,5 @@
 .top-alerts {
-  position: absolute;
+  position: fixed;
   z-index: 10;
   top: 0;
   left: 0;
